--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@netlify/plugin-nextjs": "^5.1.2",
+    "framer-motion": "^11.1.7",
     "next": "^14.2.3",
     "react": "^18.3.0",
     "react-dom": "^18.3.0"
